@@ -6,6 +6,7 @@ Complete refactoring
 * New UI for sequence image list
 * New zoom handing: ctrl+scroll (up and down) is the new way to zoom in and out
 * New preview in open dialog
+* New language selector in preferences
 * New image importer: HEIF format
 * New stacking filtering criterion (weighted FWHM). It can exclude more spurious images
 * New macOS bundle
